libs/@local/graph/atlas/src/dataset/postgres/snapshots/hash_graph_atlas__dataset__postgres__streams__tests__edge_statement_text.snap
---
source: libs/@local/graph/atlas/src/dataset/postgres/streams.rs
assertion_line: 436
expression: "edge_statement(&axes, &types).sql"
---
WITH "scope" AS (SELECT "meta"."web_id" AS "web_id", "meta"."entity_uuid" AS "entity_uuid", "meta"."entity_edition_id" AS "entity_edition_id", row_number() OVER (ORDER BY "meta"."web_id" ASC, "meta"."entity_uuid" ASC) - 1 AS "row"
FROM "entity_embeddings" AS "embedding"
INNER JOIN "entity_temporal_metadata" AS "meta"
  ON "meta"."web_id" = "embedding"."web_id"
 AND "meta"."entity_uuid" = "embedding"."entity_uuid"
 AND "meta"."draft_id" IS NULL
 AND "meta"."transaction_time" @> $1::TIMESTAMPTZ
 AND "meta"."decision_time" @> $2::TIMESTAMPTZ
INNER JOIN "entity_editions" AS "edition"
  ON "edition"."entity_edition_id" = "meta"."entity_edition_id"
 AND NOT("edition"."archived")
WHERE ("embedding"."property" IS NULL) AND (NOT(EXISTS (SELECT 
FROM "entity_is_of_type" AS "is_link"
INNER JOIN "ontology_ids" AS "link_type"
  ON "link_type"."ontology_id" = "is_link"."entity_type_ontology_id"
 AND "link_type"."base_url" = $3
WHERE "is_link"."entity_edition_id" = "meta"."entity_edition_id")))), "links" AS (SELECT "left_edge"."source_web_id" AS "web_id", "left_edge"."source_entity_uuid" AS "entity_uuid", "meta"."entity_edition_id" AS "entity_edition_id", "source"."row" AS "source_row", "target"."row" AS "target_row", "left_edge"."confidence" AS "source_confidence", "right_edge"."confidence" AS "target_confidence"
FROM "entity_edge" AS "left_edge"
INNER JOIN "entity_edge" AS "right_edge"
  ON "right_edge"."source_web_id" = "left_edge"."source_web_id"
 AND "right_edge"."source_entity_uuid" = "left_edge"."source_entity_uuid"
 AND "right_edge"."kind" = $5
 AND "right_edge"."direction" = $6
INNER JOIN "scope" AS "source"
  ON "source"."web_id" = "left_edge"."target_web_id"
 AND "source"."entity_uuid" = "left_edge"."target_entity_uuid"
INNER JOIN "scope" AS "target"
  ON "target"."web_id" = "right_edge"."target_web_id"
 AND "target"."entity_uuid" = "right_edge"."target_entity_uuid"
INNER JOIN "entity_temporal_metadata" AS "meta"
  ON "meta"."web_id" = "left_edge"."source_web_id"
 AND "meta"."entity_uuid" = "left_edge"."source_entity_uuid"
 AND "meta"."draft_id" IS NULL
 AND "meta"."transaction_time" @> $1::TIMESTAMPTZ
 AND "meta"."decision_time" @> $2::TIMESTAMPTZ
INNER JOIN "entity_editions" AS "edition"
  ON "edition"."entity_edition_id" = "meta"."entity_edition_id"
 AND NOT("edition"."archived")
WHERE ("left_edge"."kind" = $4) AND ("left_edge"."direction" = $6)), "type_rows" AS (SELECT "is_of_type"."entity_edition_id" AS "entity_edition_id", array_agg("mapping"."ordinal" ORDER BY "mapping"."ordinal" ASC) AS "ordinals"
FROM "entity_is_of_type" AS "is_of_type"
INNER JOIN (SELECT "mapping"."ontology_id", "mapping"."ordinality" - 1 AS "ordinal"
FROM UNNEST(($7::uuid[])) WITH ORDINALITY AS "mapping"("ontology_id", "ordinality")) AS "mapping"
  ON "mapping"."ontology_id" = "is_of_type"."entity_type_ontology_id"
WHERE ("is_of_type"."inheritance_depth" = 0) AND ("is_of_type"."entity_edition_id" = ANY(SELECT "entity_edition_id"
FROM "links"))
GROUP BY "is_of_type"."entity_edition_id")
SELECT "links"."web_id", "links"."entity_uuid", "links"."source_row", "links"."target_row", COALESCE("type_rows"."ordinals", ARRAY[]::int8[]), (l2_normalize(subvector("embedding"."embedding", 1, 512))::vector(512)), "edition"."confidence", "links"."source_confidence", "links"."target_confidence"
FROM "links"
INNER JOIN "entity_editions" AS "edition"
  ON "edition"."entity_edition_id" = "links"."entity_edition_id"
LEFT OUTER JOIN "entity_embeddings" AS "embedding"
  ON "embedding"."web_id" = "links"."web_id"
 AND "embedding"."entity_uuid" = "links"."entity_uuid"
 AND "embedding"."property" IS NULL
LEFT OUTER JOIN "type_rows"
  ON "type_rows"."entity_edition_id" = "links"."entity_edition_id"
ORDER BY "links"."web_id" ASC, "links"."entity_uuid" ASC, "links"."source_row" ASC, "links"."target_row" ASC
